Rel_Commit_3: Version 1.2 => Built Segments <= -UI Built = 1.2 -bizLogic - (AC) Built = 1.1 -bizLogic - (GC) Built = 1.0 -Animations Built = 1.0 -Sounddesign Built = 1.1 => Flaws <= -known flaws addressed in readme persist -deployment error with parcel persist, even after reinstall -current deployment still with manual dist => Bugs fixed <= ==> UI -- Hover Bug in diffMode switcher fixed (more or less) -->C: Initial state is not set to its hover and clicked state ==> SD -- slow collapse of playing state in different sounds -->C: Sliced down even more of the sound, only in diffSel user depended

--- a/src/sass/secondary/3. layout/singleplayer/_3-singleplayerDiffMode.scss
+++ b/src/sass/secondary/3. layout/singleplayer/_3-singleplayerDiffMode.scss
@@ -95,7 +95,7 @@
           &--three {
             border-color: red;
             grid-area: threeNum;
-            background-color: red;
+            // background-color: red;
             //NOTE: I DONT KNOW WHY ITS NOT SWITCHING FUCK IT!!!
             &:hover {
               background-color: #ff0000;
